# quant-project-template

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
app/: README.md  backtest.py  live.py
configs/: dev.yaml  paper.yaml  prod.yaml
docker/: Dockerfile  compose.yml  docker-compose.yml
docs/: README.md  architecture.md  beginner_guide.md  getting_started.md  ibkr.md  strategy_spec_template.md
playground/: README.md
src/backtest/: __init__.py  event_driven.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  paths.py
src/qsa/: __init__.py  __main__.py  cli.py
src/qsa/backtest/: costs.py  engine.py  metrics.py  plotting.py  run.py
src/qsa/config/: settings.py
src/qsa/data/: __init__.py  cache.py  pipeline.py
src/qsa/data/vendors/: __init__.py  alpaca.py  csv_vendor.py  polygon.py
src/qsa/execution/: __init__.py  broker_base.py  ibkr.py  tws_client.py
src/qsa/live/: __init__.py  runner.py
src/qsa/ops/: __init__.py  logging.py  tracking.py
src/qsa/portfolio/: __init__.py  risk.py  sizing.py
src/qsa/schemas/: __init__.py  artifacts.py  data.py
src/qsa/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  momentum_example.py
src/services/: __init__.py  tws_client.py
src/strategies/: __init__.py  momentum.py  momentum_example.py
src/utils/: __init__.py  run_id.py
tests/: test_metrics.py
tests/fixtures/: sample_ohlc.csv
tests/integration/: test_pipeline.py
tests/unit/: test_backtest_engine.py  test_cli.py  test_momentum.py  test_plotting.py  test_tracking_artifacts.py
